Placate exception check validator in GenericArguments<Type>::put(). https://bugs.webkit.org/show_bug.cgi?id=207485 <rdar://problem/59302535>

Reviewed by Robin Morisset.

JSTests:

* stress/placate-exception-check-validator-in-GenericArguments-put.js: Added.

Source/JavaScriptCore:

* runtime/GenericArgumentsInlines.h:
(JSC::GenericArguments<Type>::put):


Canonical link: https://commits.webkit.org/220484@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@256202 268f45cc-cd09-0410-ab3c-d52691b4dbfc